// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[UNIT TEST] - src/ModelUtils.ts > [SNAPSHOT] > should match the schema snapshot 1`] = `
{
  "docContents": {
    "__v": 0,
    "_id": "000000000000000000000002",
    "decimals": 18n,
    "name": "Unit Test fixture",
  },
  "name": "Example test fixture only for unit tests",
}
`;

exports[`[UNIT TEST] - src/ModelUtils.ts > [SNAPSHOT] > should match the schema snapshot 2`] = `
{
  "docContents": {
    "__v": 0,
    "_id": "000000000000000000000004",
    "decimals": 18n,
    "name": "Unit Test fixture #2",
  },
  "name": "Example test fixture only for unit tests #2",
}
`;
